--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+/cache
 node_modules
 npm-debug.log
 lib
@@ -6,3 +7,5 @@ test-js
 coverage.html
 example.html
 example-compiled.apib
+yarn-error.log
+yarn.lock
