--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "prepublish": "grunt compile",
+    "prepare": "grunt compile",
     "blanket": {
       "pattern": [
         "aglio/lib"
@@ -35,11 +35,11 @@
     "markdown"
   ],
   "dependencies": {
-    "aglio-theme-olio": "^1.6.3",
+    "aglio-theme-olio": "github:Gasol/aglio-theme-olio#lib",
     "chokidar": "^1.4.1",
     "cli-color": "^1.1.0",
+    "drafter": "^2.0.0-pre.1",
     "pretty-error": "^1.2.0",
-    "drafter": "^1.0.0",
     "serve-static": "^1.10.0",
     "socket.io": "^1.3.7",
     "yargs": "^3.31.0"
