--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
+dist: xenial
 language: node_js
-sudo: false
 node_js:
-    - "0.10"
-    - "0.12"
-    - "3"
-    - "4"
-    - "5"
-    - "6"
+  - "6"
+  - "8"
+  - "10"
+  - "11"
+  - "12"
+
 addons:
   apt:
     sources:
@@ -14,6 +14,11 @@ addons:
     packages:
     - gcc-4.8
     - g++-4.8
-env: CXX="g++-4.8" CC="gcc-4.8"
+
+env:
+  - CXX="g++-4.8" CC="gcc-4.8"
+
 after_script:
-    - npm run coveralls
+  - if [ "$TRAVIS_NODE_VERSION" = "12" ]; then npm run coveralls; fi
+
+cache: npm
