--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "bin": {
     "aglio": "./bin/aglio.js"
   },
+  "config": {
+      "coverage_timeout": 10000
+  },
   "scripts": {
     "build": "npm run lint && npm run compile",
     "compile": "coffee -o lib -c src",
     "coverage": "npm run coverage:html",
-    "coverage:text": "npm run build && c8 mocha",
+    "coverage:text": "npm run build && c8 mocha -t $npm_package_config_coverage_timeout",
     "coverage:html": "npm run coverage:text && c8 -r html report",
     "coveralls": "npm run coverage:text && c8 -r text-lcov report | coveralls",
     "gen:examples": "npm run compile && ./scripts/generate-examples",
